// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthKeeper register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3652,
  "gasUsed": 733022,
}
`;

exports[`EthKeeper register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3652,
  "gasUsed": 639375,
}
`;

exports[`EthKeeper register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1444,
  "gasUsed": 366812,
}
`;

exports[`EthKeeper register single validator succeeds 2`] = `
Object {
  "calldataByteLength": 1476,
  "gasUsed": 312041,
}
`;
